--- a/Latest_Iteration.ipynb
+++ b/Latest_Iteration.ipynb
@@ -17,10 +17,11 @@
     "from sklearn import model_selection, preprocessing\n",
     "import xgboost as xgb\n",
     "import datetime\n",
-    "seed = 125\n",
+    "seed = 5\n",
     "mult1 = .969\n",
     "mult2 = .969\n",
-    "W_model_1_2 = .714"
+    "W_model_1_2 = .714\n",
+    "W_model_12_3 = .78"
    ]
   },
   {
@@ -81,27 +82,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5650829.0</td>\n",
+       "      <td>5427002.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>7974065.0</td>\n",
+       "      <td>7966847.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5444256.0</td>\n",
+       "      <td>5521049.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5754192.0</td>\n",
+       "      <td>6126142.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4853082.0</td>\n",
+       "      <td>4869350.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -109,11 +110,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5650829.0\n",
-       "1  30475  7974065.0\n",
-       "2  30476  5444256.0\n",
-       "3  30477  5754192.0\n",
-       "4  30478  4853082.0"
+       "0  30474  5427002.0\n",
+       "1  30475  7966847.0\n",
+       "2  30476  5521049.0\n",
+       "3  30477  6126142.0\n",
+       "4  30478  4869350.0"
       ]
      },
      "execution_count": 2,
@@ -352,27 +353,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5276311.5</td>\n",
+       "      <td>5376609.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8111741.5</td>\n",
+       "      <td>8204070.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5291116.0</td>\n",
+       "      <td>5311644.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5578066.5</td>\n",
+       "      <td>5454563.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4928869.5</td>\n",
+       "      <td>5101360.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -380,11 +381,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5276311.5\n",
-       "1  30475  8111741.5\n",
-       "2  30476  5291116.0\n",
-       "3  30477  5578066.5\n",
-       "4  30478  4928869.5"
+       "0  30474  5376609.0\n",
+       "1  30475  8204070.0\n",
+       "2  30476  5311644.5\n",
+       "3  30477  5454563.0\n",
+       "4  30478  5101360.5"
       ]
      },
      "execution_count": 3,
@@ -485,27 +486,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5382616.0</td>\n",
+       "      <td>5351010.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8108945.0</td>\n",
+       "      <td>7826861.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5110883.0</td>\n",
+       "      <td>5173095.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5226355.5</td>\n",
+       "      <td>5463000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4718412.5</td>\n",
+       "      <td>4882758.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -513,11 +514,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5382616.0\n",
-       "1  30475  8108945.0\n",
-       "2  30476  5110883.0\n",
-       "3  30477  5226355.5\n",
-       "4  30478  4718412.5"
+       "0  30474  5351010.5\n",
+       "1  30475  7826861.0\n",
+       "2  30476  5173095.0\n",
+       "3  30477  5463000.0\n",
+       "4  30478  4882758.0"
       ]
      },
      "execution_count": 4,
@@ -633,28 +634,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>price_doc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30474</td>\n",
+       "      <td>5381917.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30475</td>\n",
+       "      <td>8066134.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30476</td>\n",
+       "      <td>5325525.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30477</td>\n",
+       "      <td>5597626.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30478</td>\n",
+       "      <td>5000292.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  price_doc\n",
+       "0  30474  5381917.0\n",
+       "1  30475  8066134.0\n",
+       "2  30476  5325525.0\n",
+       "3  30477  5597626.5\n",
+       "4  30478  5000292.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_result = output.merge(df_sub, on=\"id\", suffixes=['_louis','_bruno'])\n",
     "first_result[\"price_doc\"] = np.exp( W_model_1_2*np.log(first_result.price_doc_louis) + \n",
     "                                    (1-W_model_1_2)*np.log(first_result.price_doc_bruno) )  # multiplies out to .5 & .2\n",
     "result = first_result.merge(gunja_output, on=\"id\", suffixes=['_follow','_gunja'])\n",
     "\n",
-    "result[\"price_doc\"] = np.exp( .7*np.log(result.price_doc_follow) + \n",
-    "                              .3*np.log(result.price_doc_gunja) )\n",
+    "result[\"price_doc\"] = np.exp( W_model_12_3*np.log(result.price_doc_follow) + \n",
+    "                              (1-W_model_12_3)*np.log(result.price_doc_gunja) )\n",
     "result.drop([\"price_doc_louis\",\"price_doc_bruno\",\"price_doc_follow\",\"price_doc_gunja\"],axis=1,inplace=True)\n",
     "result.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -662,7 +732,7 @@
    },
    "outputs": [],
    "source": [
-    "result.to_csv('submission_jun8_4_seed125_Last_iteration_withoutYear.csv', index=False)"
+    "result.to_csv('submission_jun11_2_seed5_w27Pt8_Last_iteration_withoutYear.csv', index=False)"
    ]
   },
   {
