--- a/Latest_Iteration_MultiplierTuning.ipynb
+++ b/Latest_Iteration_MultiplierTuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -17,16 +17,16 @@
     "from sklearn import model_selection, preprocessing\n",
     "import xgboost as xgb\n",
     "import datetime\n",
-    "seed = 253\n",
+    "seed = 5\n",
     "mult1 = .969\n",
     "mult2 = .969\n",
     "W_model_1_2 = .714\n",
-    "W_model_12_3 = .7"
+    "W_model_12_3 = .75"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -34,9 +34,42 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:27: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate_ix\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:29: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate_ix\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -49,27 +82,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5493718.0</td>\n",
+       "      <td>5485092.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8022051.0</td>\n",
+       "      <td>7949334.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5406035.0</td>\n",
+       "      <td>5269342.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5702757.0</td>\n",
+       "      <td>5680644.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4884492.0</td>\n",
+       "      <td>4774072.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -77,14 +110,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5493718.0\n",
-       "1  30475  8022051.0\n",
-       "2  30476  5406035.0\n",
-       "3  30477  5702757.0\n",
-       "4  30478  4884492.0"
+       "0  30474  5485092.0\n",
+       "1  30475  7949334.0\n",
+       "2  30476  5269342.0\n",
+       "3  30477  5680644.0\n",
+       "4  30478  4774072.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,6 +148,11 @@
     "#multiplier = 0.969\n",
     "\n",
     "#clean data\n",
+    "\n",
+    "train.loc[(train['full_sq']>=train['full_sq'].quantile(0.98)) & \n",
+    "          (train['price_doc']>=train['price_doc'].quantile(0.98)), 'price_doc']\n",
+    "          =train.loc[(train['full_sq']>=train['full_sq'].quantile(0.98)) & \n",
+    "           (train['price_doc']>=train['price_doc'].quantile(0.98)), 'price_doc']*1.02\n",
     "bad_index = train[train.life_sq > train.full_sq].index\n",
     "train.ix[bad_index, \"life_sq\"] = np.NaN\n",
     "equal_index = [601,1896,2791]\n",
@@ -252,7 +290,7 @@
     "\n",
     "\n",
     "xgb_params = {\n",
-    "    'eta': 0.05,\n",
+    "    'eta': 0.03,\n",
     "    'max_depth': 5,\n",
     "    'subsample': 0.7,\n",
     "    'colsample_bytree': 0.7,\n",
@@ -284,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -295,6 +333,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -307,27 +358,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5227167.5</td>\n",
+       "      <td>5374397.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8088747.0</td>\n",
+       "      <td>7982927.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5306154.5</td>\n",
+       "      <td>5342677.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5777478.5</td>\n",
+       "      <td>5594513.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5042475.5</td>\n",
+       "      <td>5015162.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -335,14 +386,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5227167.5\n",
-       "1  30475  8088747.0\n",
-       "2  30476  5306154.5\n",
-       "3  30477  5777478.5\n",
-       "4  30478  5042475.5"
+       "0  30474  5374397.0\n",
+       "1  30475  7982927.0\n",
+       "2  30476  5342677.5\n",
+       "3  30477  5594513.5\n",
+       "4  30478  5015162.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,6 +404,31 @@
     "train = pd.read_csv('./input/train.csv')\n",
     "test = pd.read_csv('./input/test.csv')\n",
     "id_test = test.id\n",
+    "\n",
+    "# ratio of living area to full area #\n",
+    "train[\"ratio_life_sq_full_sq\"] = train[\"life_sq\"] / np.maximum(train[\"full_sq\"].astype(\"float\"),1)\n",
+    "test[\"ratio_life_sq_full_sq\"] = test[\"life_sq\"] / np.maximum(test[\"full_sq\"].astype(\"float\"),1)\n",
+    "train[\"ratio_life_sq_full_sq\"].ix[train[\"ratio_life_sq_full_sq\"]<0] = 0\n",
+    "train[\"ratio_life_sq_full_sq\"].ix[train[\"ratio_life_sq_full_sq\"]>1] = 1\n",
+    "test[\"ratio_life_sq_full_sq\"].ix[test[\"ratio_life_sq_full_sq\"]<0] = 0\n",
+    "test[\"ratio_life_sq_full_sq\"].ix[test[\"ratio_life_sq_full_sq\"]>1] = 1\n",
+    "\n",
+    "# ratio of kitchen area to living area #\n",
+    "train[\"ratio_kitch_sq_life_sq\"] = train[\"kitch_sq\"] / np.maximum(train[\"life_sq\"].astype(\"float\"),1)\n",
+    "test[\"ratio_kitch_sq_life_sq\"] = test[\"kitch_sq\"] / np.maximum(test[\"life_sq\"].astype(\"float\"),1)\n",
+    "train[\"ratio_kitch_sq_life_sq\"].ix[train[\"ratio_kitch_sq_life_sq\"]<0] = 0\n",
+    "train[\"ratio_kitch_sq_life_sq\"].ix[train[\"ratio_kitch_sq_life_sq\"]>1] = 1\n",
+    "test[\"ratio_kitch_sq_life_sq\"].ix[test[\"ratio_kitch_sq_life_sq\"]<0] = 0\n",
+    "test[\"ratio_kitch_sq_life_sq\"].ix[test[\"ratio_kitch_sq_life_sq\"]>1] = 1\n",
+    "\n",
+    "# ratio of kitchen area to full area #\n",
+    "train[\"ratio_kitch_sq_full_sq\"] = train[\"kitch_sq\"] / np.maximum(train[\"full_sq\"].astype(\"float\"),1)\n",
+    "test[\"ratio_kitch_sq_full_sq\"] = test[\"kitch_sq\"] / np.maximum(test[\"full_sq\"].astype(\"float\"),1)\n",
+    "train[\"ratio_kitch_sq_full_sq\"].ix[train[\"ratio_kitch_sq_full_sq\"]<0] = 0\n",
+    "train[\"ratio_kitch_sq_full_sq\"].ix[train[\"ratio_kitch_sq_full_sq\"]>1] = 1\n",
+    "test[\"ratio_kitch_sq_full_sq\"].ix[test[\"ratio_kitch_sq_full_sq\"]<0] = 0\n",
+    "test[\"ratio_kitch_sq_full_sq\"].ix[test[\"ratio_kitch_sq_full_sq\"]>1] = 1\n",
+    "\n",
     "\n",
     "y_train = train[\"price_doc\"] * mult1 + 10\n",
     "x_train = train.drop([\"id\", \"timestamp\", \"price_doc\"], axis=1)\n",
@@ -395,11 +471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -415,6 +492,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -427,27 +517,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5506833.0</td>\n",
+       "      <td>5501141.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8318103.5</td>\n",
+       "      <td>8040485.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5414398.0</td>\n",
+       "      <td>5175748.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5486214.0</td>\n",
+       "      <td>5408272.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5044129.5</td>\n",
+       "      <td>4734986.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -455,14 +545,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5506833.0\n",
-       "1  30475  8318103.5\n",
-       "2  30476  5414398.0\n",
-       "3  30477  5486214.0\n",
-       "4  30478  5044129.5"
+       "0  30474  5501141.5\n",
+       "1  30475  8040485.5\n",
+       "2  30476  5175748.5\n",
+       "3  30477  5408272.5\n",
+       "4  30478  4734986.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -592,7 +682,7 @@
     "                              (1-W_model_12_3)*np.log(result.price_doc_gunja) )\n",
     "result.drop([\"price_doc_louis\",\"price_doc_bruno\",\"price_doc_follow\",\"price_doc_gunja\"],axis=1,inplace=True)\n",
     "result.head()\n",
-    "result.to_csv('submission_jun6_4_seed253_withoutYear.csv', index=False)"
+    "result.to_csv('submission_jun11_4_seed123_w2_7Pt5_Last_iteration_withoutYear.csv', index=False)"
    ]
   },
   {
