--- a/Latest_Iteration_MultiplierTuning_2.ipynb
+++ b/Latest_Iteration_MultiplierTuning_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -38,18 +38,29 @@
     "jason_weight = .2\n",
     "bruno_weight = .2\n",
     "reynaldo_weight = 1 - jason_weight - bruno_weight\n",
-    "seed = 125"
+    "seed1 = 5\n",
+    "seed2 = 48\n",
+    "seed3 = 123"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "# Get ready for lots of annoying deprecation warnings\n",
     "import statsmodels.api as sm"
@@ -57,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -86,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,7 +175,7 @@
        "6593788.9177278513"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -225,7 +236,7 @@
        "7773440.7512406502"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -254,7 +265,7 @@
        "6631881.8293717252"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -333,27 +344,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5789526.0</td>\n",
+       "      <td>5632583.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>7922576.0</td>\n",
+       "      <td>8103520.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5730028.5</td>\n",
+       "      <td>5599423.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5844774.0</td>\n",
+       "      <td>5845963.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4872749.5</td>\n",
+       "      <td>4970532.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -361,14 +372,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5789526.0\n",
-       "1  30475  7922576.0\n",
-       "2  30476  5730028.5\n",
-       "3  30477  5844774.0\n",
-       "4  30478  4872749.5"
+       "0  30474  5632583.0\n",
+       "1  30475  8103520.5\n",
+       "2  30476  5599423.5\n",
+       "3  30477  5845963.0\n",
+       "4  30478  4970532.0"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +535,7 @@
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
     "    'silent': 1,\n",
-    "    'seed': seed\n",
+    "    'seed': seed1\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(x_train, y_train, weight=wts)\n",
@@ -547,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -557,10 +568,10 @@
     {
      "data": {
       "text/plain": [
-       "6840405.5"
+       "6848545.0"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -618,27 +629,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5445102.5</td>\n",
+       "      <td>5731143.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8371235.0</td>\n",
+       "      <td>8257180.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5460380.5</td>\n",
+       "      <td>5471640.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5756511.0</td>\n",
+       "      <td>5956860.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5086542.0</td>\n",
+       "      <td>5218863.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -646,14 +657,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5445102.5\n",
-       "1  30475  8371235.0\n",
-       "2  30476  5460380.5\n",
-       "3  30477  5756511.0\n",
-       "4  30478  5086542.0"
+       "0  30474  5731143.5\n",
+       "1  30475  8257180.0\n",
+       "2  30476  5471640.0\n",
+       "3  30477  5956860.5\n",
+       "4  30478  5218863.5"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +701,7 @@
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
     "    'silent': 1,\n",
-    "    'seed': seed\n",
+    "    'seed': seed2\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(x_train, y_train)\n",
@@ -706,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -716,10 +727,10 @@
     {
      "data": {
       "text/plain": [
-       "6861757.5"
+       "6875100.5"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -786,27 +797,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5554802.5</td>\n",
+       "      <td>5677124.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8368358.0</td>\n",
+       "      <td>8297705.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5274382.5</td>\n",
+       "      <td>5341318.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5393550.5</td>\n",
+       "      <td>5581285.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4869359.5</td>\n",
+       "      <td>4886457.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -814,14 +825,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5554802.5\n",
-       "1  30475  8368358.0\n",
-       "2  30476  5274382.5\n",
-       "3  30477  5393550.5\n",
-       "4  30478  4869359.5"
+       "0  30474  5677124.5\n",
+       "1  30475  8297705.0\n",
+       "2  30476  5341318.0\n",
+       "3  30477  5581285.5\n",
+       "4  30478  4886457.0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +926,7 @@
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
     "    'silent': 1,\n",
-    "    'seed': seed\n",
+    "    'seed': seed3\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(X_train, y_train, feature_names=df_columns)\n",
@@ -932,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -942,10 +953,10 @@
     {
      "data": {
       "text/plain": [
-       "6769383.0"
+       "6768834.5"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1003,27 +1014,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5534343.5</td>\n",
+       "      <td>5700490.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8278959.5</td>\n",
+       "      <td>8234281.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5475195.0</td>\n",
+       "      <td>5470529.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5699337.5</td>\n",
+       "      <td>5857725.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4999228.5</td>\n",
+       "      <td>5100650.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1031,14 +1042,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5534343.5\n",
-       "1  30475  8278959.5\n",
-       "2  30476  5475195.0\n",
-       "3  30477  5699337.5\n",
-       "4  30478  4999228.5"
+       "0  30474  5700490.0\n",
+       "1  30475  8234281.5\n",
+       "2  30476  5470529.0\n",
+       "3  30477  5857725.5\n",
+       "4  30478  5100650.0"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1073,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1109,27 +1120,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5331994.0</td>\n",
+       "      <td>5487804.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8075632.5</td>\n",
+       "      <td>8021281.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5273268.0</td>\n",
+       "      <td>5259461.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5495917.0</td>\n",
+       "      <td>5644107.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4801415.5</td>\n",
+       "      <td>4892833.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1137,14 +1148,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5331994.0\n",
-       "1  30475  8075632.5\n",
-       "2  30476  5273268.0\n",
-       "3  30477  5495917.0\n",
-       "4  30478  4801415.5"
+       "0  30474  5487804.0\n",
+       "1  30475  8021281.5\n",
+       "2  30476  5259461.5\n",
+       "3  30477  5644107.0\n",
+       "4  30478  4892833.5"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1175,7 +1186,7 @@
    },
    "outputs": [],
    "source": [
-    "sub.to_csv('submission_jun8_5__Seed125_maroHumanilityPt965_Latest_Iteration_2.csv', index=False)"
+    "sub.to_csv('submission_jun12_4_Seed5_48_123_microHumanilityPt1_Latest_Iteration_2.csv', index=False)"
    ]
   },
   {
@@ -1193,7 +1204,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
